--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-energy-spot",
   "version": "1.0.2",
-  "homepage": "/build/",
   "private": true,
   "dependencies": {
     "@emotion/react": "=11.11.0",
@@ -50,7 +49,7 @@
     "xlsx": "=0.18.5"
   },
   "scripts": {
-    "start": "cross-env HOST=0.0.0.0 PORT=3000 PUBLIC_URL=/ react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "build-all": "node comands/buildAndRename.js",
     "test": "react-scripts test",
@@ -69,10 +68,14 @@
   },
   "browserslist": {
     "production": [
-      "chrome 77"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version"
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   },
   "options": {
