--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-energy-spot",
   "version": "1.0.2",
   "private": true,
+  "homepage": "/build/",
   "dependencies": {
     "@emotion/react": "=11.11.0",
     "@emotion/styled": "=11.11.0",
